fix(popover): update caret alignment and remove dev stories

--- a/packages/components/src/components/popover/_popover.scss
+++ b/packages/components/src/components/popover/_popover.scss
@@ -102,7 +102,7 @@
     .#{$prefix}--popover-contents::after {
     top: 0;
     left: $popover-caret-offset;
-    transform: translate(-50%, -50%) rotate(45deg);
+    transform: translateY(-50%) rotate(45deg);
   }
 
   .#{$prefix}--popover--top-right .#{$prefix}--popover-contents {
@@ -115,7 +115,7 @@
     .#{$prefix}--popover-contents::after {
     top: 0;
     right: $popover-caret-offset;
-    transform: translate(50%, -50%) rotate(45deg);
+    transform: translateY(-50%) rotate(45deg);
   }
 
   //-----------------------------------------------------------------------------
@@ -143,7 +143,7 @@
     .#{$prefix}--popover-contents::after {
     bottom: 0;
     left: $popover-caret-offset;
-    transform: translate(-50%, 50%) rotate(45deg);
+    transform: translateY(50%) rotate(45deg);
   }
 
   .#{$prefix}--popover--caret.#{$prefix}--popover--bottom-right
@@ -152,7 +152,7 @@
     .#{$prefix}--popover-contents::after {
     right: $popover-caret-offset;
     bottom: 0;
-    transform: translate(50%, 50%) rotate(45deg);
+    transform: translateY(50%) rotate(45deg);
   }
 
   //-----------------------------------------------------------------------------
@@ -179,7 +179,7 @@
     .#{$prefix}--popover-contents::after {
     bottom: $popover-caret-offset;
     left: 0;
-    transform: translate(-50%, 50%) rotate(45deg);
+    transform: translateX(-50%) rotate(45deg);
   }
 
   .#{$prefix}--popover--caret.#{$prefix}--popover--left-top
@@ -188,7 +188,7 @@
     .#{$prefix}--popover-contents::after {
     top: $popover-caret-offset;
     left: 0;
-    transform: translate(-50%, -50%) rotate(45deg);
+    transform: translateX(-50%) rotate(45deg);
   }
 
   //-----------------------------------------------------------------------------
@@ -215,7 +215,7 @@
     .#{$prefix}--popover-contents::after {
     right: 0;
     bottom: $popover-caret-offset;
-    transform: translate(50%, 50%) rotate(45deg);
+    transform: translateX(50%) rotate(45deg);
   }
 
   .#{$prefix}--popover--caret.#{$prefix}--popover--right-top
@@ -224,7 +224,7 @@
     .#{$prefix}--popover-contents::after {
     top: $popover-caret-offset;
     right: 0;
-    transform: translate(50%, -50%) rotate(45deg);
+    transform: translateX(50%) rotate(45deg);
   }
 }
 
