--- a/packages/react/src/components/Popover/story.scss
+++ b/packages/react/src/components/Popover/story.scss
@@ -50,6 +50,10 @@
   margin-bottom: 1rem;
 }
 
+.mt-9 {
+  padding-top: 3rem;
+}
+
 .p-3 {
   padding: 1rem;
 }
